2004-02-14  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-shell (login-processor): if stdin is not a terminal,
	password prompt is echoed.

2004-02-11  Nobuo Yamashita  <nobsun@sampou.org>

	* examples/lazy-nqueen/lazy-nqueen.kahua : improved laziness.
	Function applications are delayed instead args of cons.

	* test/nqueen.scm : modified a little.
	
2004-02-10  Nobuo Yamashita  <nobsun@sampou.org>

	* examples/lazy-nqueen/lazy-nqueen.kahua : added.

	* test/nqueen.scm : added test part for examples/lazy-nqueen.
	
2004-02-08  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm : records persistent class information
	as <kahua-persistent-metainfo> persistent object.
	* test/persistence.scm : updated accordingly.

	* src/kahua/test/worker.scm (call-worker/gsid->sxml): added.
	(make-match&pick) : dropped the support of extra sxpath spec.
	it is easier to apply sxpath in call-worker/gsid->sxml instead
	of here; it will produce comprehensive error log.
	Also decode uri encoding.

	* test/nqueen.scm : added to test examples/nqueen.

2004-02-06  Shiro Kawai  <shiro@acm.org>

	* src/kahua/partcont.scm, test/partcont.scm :
	(reset/pc, call/pc, let/pc) : implemented partial continuation
	according to Gasbichler&Sperber ICFP02 paper.
	* src/kahua/kahua.scm : extends kahua.partcont
	* src/kahua/server.scm : wrap handler invocation by reset/pc,
	so that the partial continuation captured in the application-server
	returns correctly.

	* examples/nqueen/nqueen.kahua : added an example that uses
	partial continuation (nqueen code by Koichi Sasada).

	* examples/lambdabooks/login.kahua : slightly revised using
	entry-lambda

2004-02-03  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm : replaced sxml:string->xml with 
	sxml:string->html
	
2004-02-02  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin, test/admin.scm : added "adduser", "deluser", "lsuser" commands for the developer account management.
